--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ html, body {
 
 #root {
   height: 100%;
+  display: flex;
   /* display: grid;
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(5, 1fr); */
