Tic Tac Toe - implement "New game" functionality

--- a/src/Tic Tac Toe/Components/square.css
+++ b/src/Tic Tac Toe/Components/square.css
@@ -1,13 +1,14 @@
 .square {
     border: 1px solid black;
     padding: 0%;
+    font-size: 6rem
 }
 
 .square:hover{
     background-color: #707994;
 }
 
-.css-u4bs8o-MuiSvgIcon-root{
-    width: 5em;
+/* .css-159oubt-MuiSvgIcon-root{
+    width: 15em;
     height: 5em;
-}
+} */
