--- a/src/Tic Tac Toe/Components/playGround.css
+++ b/src/Tic Tac Toe/Components/playGround.css
@@ -1,16 +1,44 @@
 .container {
-   /* width: 70vw;
-   height: 70vh; */
+   width: 70vw;
+   height: 70vh;
    /* background-color: aquamarine; */
    border: 1px solid black;
    border: none;
-   flex-direction: column;
    display: grid;
-   grid-template-rows: auto auto auto;
+   grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 
 .board-row {
     display: grid;
-   grid-template-columns: auto auto auto;
+   grid-template-columns: 1fr 1fr 1fr;
    /* border: 1px solid black; */
+}
+
+.showWinner{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 600px;
+    height: 200px;
+    margin-top: -70px;
+    padding: 0;
+    border-radius: 20px;
+    transform: translateX(-50%);
+    font-size: 4rem;
+    color: aliceblue;
+    background-color: rgb(98, 121, 109);
+    display: grid;
+}
+
+.showWinner button{
+   background-color: rgb(202, 207, 204);
+   border-radius: 20px;
+}
+
+.status{
+   font-size: 3rem
+}
+
+div{
+   text-align: center;
 }
