--- a/src/Tic Tac Toe/Components/playGround.css
+++ b/src/Tic Tac Toe/Components/playGround.css
@@ -2,10 +2,32 @@
    width: 70vw;
    height: 70vh;
    /* background-color: aquamarine; */
-   border: 1px solid black;
    border: none;
    display: grid;
-   grid-template-rows: 1fr 1fr 1fr 1fr;
+   grid-template-rows:1fr 1fr 1fr 1fr ;
+}
+
+header{
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+   position: absolute;
+   left: 50%;
+   top: 10%;
+   width: 100%;
+   height: 75px;
+   margin-top: -70px;
+   padding: 0;
+   border-radius: 20px;
+   transform: translateX(-50%);
+   font-size: 4rem;
+   color: white;
+   background-color: #303030;
+}
+
+header div {
+   font-size: 3rem;
+   grid-column: auto auto;
+   
 }
 
 .board-row {
@@ -36,9 +58,20 @@
 }
 
 .status{
-   font-size: 3rem
+   font-size: 3rem;
+   font-family:Impact;
 }
 
 div{
    text-align: center;
+}
+
+.buttons{
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+   font-size: 2rem;
+}
+
+.showWinner button{
+   margin: 5px;
 }
