--- a/src/Tic Tac Toe/Components/playGround.css
+++ b/src/Tic Tac Toe/Components/playGround.css
@@ -33,6 +33,8 @@ header div {
 .board-row {
     display: grid;
    grid-template-columns: 1fr 1fr 1fr;
+   background-color: aqua;
+   color: blue;
    /* border: 1px solid black; */
 }
 
@@ -75,3 +77,13 @@ div{
 .showWinner button{
    margin: 5px;
 }
+
+/* .X-cell {
+   background-color: green;
+   color: azure;
+}
+
+.O-cell {
+   background-color: red;
+   color: rebeccapurple;
+} */
