Tic Tac Toe change background color

--- a/src/Tic Tac Toe/Components/square.css
+++ b/src/Tic Tac Toe/Components/square.css
@@ -6,21 +6,14 @@
 
 .square:hover{
     background-color: #707994;
-    color: blue;
 }
 
-/* .css-159oubt-MuiSvgIcon-root{
-    width: 15em;
-    height: 5em;
-} */
-
-
 .X-cell{
-    background-color: green;
-    color: azure;
+    background-color:#14bdac;
+    color: #70757a;
  }
  
  .O-cell {
-    background-color: red;
-    color: rebeccapurple;
+    background-color: #ed1b2e;
+    color:  rgb(242, 235, 211);
  }
