--- a/src/DotsAndBoxes/playGround.css
+++ b/src/DotsAndBoxes/playGround.css
@@ -1,40 +1,27 @@
-*{
+/* *{
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;;
-}
-
-body {
-    background-color: gray;
-}
+} */
 
 .container{
-    /* display: grid;
-    grid-template-rows: 1fr 1fr 1fr; */
-/* 
-    position: absolute;
-    left: 50%;
-    top: 50%; */
-    /* width: 600px;
-    height: 200px; */
-    /* margin-top: -70px;
-    padding: 0;
-    border-radius: 20px;
-    transform: translateX(-50%);
-    font-size: 4rem;
-    color: aliceblue;
-    background-color: rgb(98, 121, 109);
-    display: grid; */
+    outline: 2px solid rgb(134, 154, 189); 
+    display: grid;
 
-    margin: auto;
-    width: 50%;
-    height: 50%;
-    border: 3px solid green;
-    padding: 10px;
-    
 }
 
-.playGround{
-    
+.row{
+    /* height: 20px;
+    width: 100px; */
+}
+
+.cell{
+    width: 5px;
+    height: 5px;
+    outline: 1px solid rgb(146, 8, 66);
+    grid-template-columns : (4, 1fr);
+    /* display: grid;
+    background-color: #cf1111;
+    border-radius: 50%; */
 }
