--- a/src/DotsAndBoxes/playGround.css
+++ b/src/DotsAndBoxes/playGround.css
@@ -10,9 +10,32 @@
 }
 
 .row{
-    height: 30px;
+    /* height: 40px; */
+    margin: 0;
 }
 
 .cell{
+    width: 70px;
+    height: 70px;
+    /* outline: 2px dotted rgb(10, 9, 9); */
+    display: block;
+    padding: 0;
+}
 
+.horizontal {
+    width: 69px;
+    height: 3px;
+    /* outline: 1px dashed rgb(10, 9, 9); */
+    padding: 0;
+}
+
+.horizontal:hover, .vertical:hover{
+    border: 1px dashed rgb(10, 9, 9);
+}
+
+.vertical {
+    width: 3px;
+    height: 69px;
+    /* outline: 1px dashed rgb(206, 19, 19); */
+    padding: 0;
 }
