--- a/src/DotsAndBoxes/playGround.css
+++ b/src/DotsAndBoxes/playGround.css
@@ -38,7 +38,7 @@
 }
 
 .horizontal:hover, .vertical:hover{
-   background-color: rgb(245, 4, 36);
+   background-color: rgb(21, 197, 74);
 }
 
 .red{
@@ -47,4 +47,26 @@
 
 .blue{
     background-color: rgb(4, 27, 233); 
+}
+
+.showWinner{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 600px;
+    height: 200px;
+    margin-top: -70px;
+    padding: 0;
+    border-radius: 20px;
+    transform: translateX(-50%);
+    font-size: 4rem;
+    color: aliceblue;
+    background-color: rgb(98, 121, 109);
+    display: grid;
+}
+
+.showWinner button{
+   background-color: rgb(202, 207, 204);
+   border-radius: 20px;
+   margin: 5px;
 }
